--- a/src/translations/EN.json
+++ b/src/translations/EN.json
@@ -21,5 +21,6 @@
   "Morning Events": "Morning Events",
   "Lunch": "Lunch",
   "Afternoon Events": "Afternoon Events",
-  "Dinner": "Dinner"
+  "Dinner": "Dinner",
+  "GIFTS": "GIFTS"
 }
