--- a/src/translations/ES.json
+++ b/src/translations/ES.json
@@ -21,5 +21,6 @@
   "Morning Events": "Mañana",
   "Lunch": "Almuerzo",
   "Afternoon Events": "Tarde",
-  "Dinner": "Cena"
+  "Dinner": "Cena",
+  "GIFTS": "REGALOS"
 }
