sidebar can be collapsed

--- a/src/translations/EN.json
+++ b/src/translations/EN.json
@@ -11,6 +11,7 @@
   "TRANSFERS": "TRANSFERS",
   "MEAL FUNCTIONS": "MEAL FUNCTIONS",
   "ACTIVITIES": "ACTIVITIES",
+  "VENUES": "VENUES",
   "quotation": "Quotation for",
   "Event Type": "Event Type",
   "Service": "Service",
