--- a/src/translations/ES.json
+++ b/src/translations/ES.json
@@ -11,6 +11,7 @@
   "TRANSFERS": "TRASLADOS",
   "MEAL FUNCTIONS": "COMIDAS Y FUNCIONES",
   "ACTIVITIES": "ACTIVIDADES",
+  "VENUES": "VENUES",
   "quotation": "Cotización para",
   "Event Type": "Tipo de evento",
   "Service": "Servicio",
