Overnight - MultiDestination up

--- a/src/translations/EN.json
+++ b/src/translations/EN.json
@@ -23,5 +23,6 @@
   "Lunch": "Lunch",
   "Afternoon Events": "Afternoon Events",
   "Dinner": "Dinner",
-  "GIFTS": "GIFTS"
+  "GIFTS": "GIFTS",
+  "ENTERTAINMENT": "Entertainment"
 }
