--- a/src/translations/ES.json
+++ b/src/translations/ES.json
@@ -23,5 +23,6 @@
   "Lunch": "Almuerzo",
   "Afternoon Events": "Tarde",
   "Dinner": "Cena",
-  "GIFTS": "REGALOS"
+  "GIFTS": "REGALOS",
+  "ENTERTAINMENT": "Entretenimiento"
 }
