--- a/src/translations/ES.json
+++ b/src/translations/ES.json
@@ -24,5 +24,6 @@
   "Afternoon Events": "Tarde",
   "Dinner": "Cena",
   "GIFTS": "REGALOS",
-  "ENTERTAINMENT": "Entretenimiento"
+  "ENTERTAINMENT": "Entretenimiento",
+  "destination": "destino"
 }
