--- a/src/translations/EN.json
+++ b/src/translations/EN.json
@@ -24,5 +24,6 @@
   "Afternoon Events": "Afternoon Events",
   "Dinner": "Dinner",
   "GIFTS": "GIFTS",
-  "ENTERTAINMENT": "Entertainment"
+  "ENTERTAINMENT": "Entertainment",
+  "destination": "destination"
 }
